# ds_homebrew

./: .gitignore  Cargo.toml  Dockerfile  Makefile  armv5te-nintendo-ds.json  autocomplete.sh
.cargo/: config.toml
src/: main.rs  main_bg.rs  player.rs  sprite.rs
src/assets/: base.rs  bird.rs  dog.rs  drunkenlogo.rs  mod.rs
